--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-pandas==1.2.4
-streamlit==0.87.0
+certifi==2021.5.30
+charset-normalizer==2.0.4
+docopt==0.6.2
+idna==3.2
+joblib==1.0.1
+numpy==1.21.2
+pipreqs==0.4.10
+requests==2.26.0
+scikit-learn==0.24.2
+scipy==1.7.1
+sklearn==0.0
+threadpoolctl==2.2.0
+urllib3==1.26.6
+yarg==0.1.9
